<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">LewicaPL</string>
	<color name="white">#fff</color>
	<color name="red">#fa1000</color>
	<color name="orange">#ffb31a</color>
	<color name="grey_light">#eee</color>
	<color name="grey">#ccc</color>
	<color name="grey_dark">#aaa</color>
	<color name="grey_darker">#303030</color>
	<color name="black">#000</color>
	<color name="blue_facebook">#1D4088</color>
	<color name="unread">#BF0000</color>
	<color name="read">#136F80</color>
	<color name="blue_light">#D2EFF5</color>
	<string name="title_news">LewicaPL: informacje</string>
	<string name="title_opinions">LewicaPL: publicystyka</string>
	<string name="title_article">LewicaPL: artykuł</string>
	<string name="title_blogs">LewicaPL: blogi</string>
	<string name="title_announcements">LewicaPL: ogłoszenia</string>
	<string name="title_announcement">LewicaPL: ogłoszenie</string>
	<string name="title_history">LewicaPL: historia</string>
	<string name="title_more">LewicaPL: więcej</string>
	<string name="title_readers_comments">LewicaPL: komentarze czytelników</string>
	<string name="tab_news">Newsy</string>
	<string name="tab_texts">Teksty</string>
	<string name="tab_blog">Blogi</string>
	<string name="tab_announcements">Anonse</string>
	<string name="tab_history">Historia</string>
	<string name="tab_more">Więcej</string>
	<string name="nav_next">Następny</string>
	<string name="nav_previous">Poprzedni</string>
	<string name="nav_readers_comments">Komentarze</string>
	<string name="nav_share">Poleć</string>
	<string name="nav_show_this_blog_only">Inne wpisy na tym blogu</string>
	<string name="menu_change_text_size">Rozmiar czcionki</string>
	<string name="menu_change_background">Zmień tło</string>
	<string name="heading_change_text_size">Zmiana rozmiaru czcionki</string>
	<string name="heading_poland">polska</string>
	<string name="heading_world">świat</string>
	<string name="heading_texts">publicystyka</string>
	<string name="heading_reviews">recenzje</string>
	<string name="heading_culture">kultura</string>
	<string name="heading_announcements">ogłoszenia</string>
	<string name="heading_history">historia</string>
	<string name="heading_homepage">lewica.pl</string>
	<string name="heading_facebook">facebook</string>
	<string name="heading_blogs">blogi</string>
	<string name="heading_blog">blog</string>
	<string name="heading_links">katalog</string>
	<string name="heading_search">wyszukiwarka</string>
	<string name="heading_team">redakcja</string>
	<string name="label_refresh">Odśwież</string>
	<string name="label_mark_as_read">Oznacz jako przeczytane</string>
	<string name="label_where">Gdzie:</string>
	<string name="label_when">Kiedy:</string>
	<string name="label_share_link">Poleć artykuł via:</string>
	<string name="heading_history_extra">w historii</string>
	<string name="email_subject_announcement">Pytanie nt. ogłoszenia w lewica.pl (wersja dla Androida)</string>
	<string name="paragraph_more_intro">Kliknięcie na poniższe nagłówki powoduje przejście do wybranej strony w przeglądarce systemowej.</string>
	<string name="description_article_item_icon">Ikona artykułu</string>
	<string name="description_ico_pencil">Ikona komentarza redakcyjnego</string>
	<string name="description_article_image">Ilustracja</string>
	<string name="placeholder_category">Kategoria</string>
	<string name="placeholder_content">Treść</string>
	<string name="placeholder_date">Data</string>
	<string name="placeholder_editors_comment">Komentarz redakcyjny</string>
	<string name="placeholder_published_by">Autor</string>
	<string name="placeholder_title">Tytuł</string>
	<string name="placeholder_when">Kiedy</string>
	<string name="placeholder_where">Gdzie</string>
	<string name="placeholder_year">Rok</string>
	<string name="path_images">/lewicapl/images/</string>
	<string name="ok">OK</string>
</resources>
