<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/article_scroll_view"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
>
	<RelativeLayout
		android:id="@+id/article_layout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="10dp"
	>
		<LinearLayout
			android:id="@+id/info_bar_article"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@color/orange"
		>
			<TextView
				android:text="@string/placeholder_category"
				android:id="@+id/article_category"
				android:layout_width="wrap_content"
				style="@style/InfoBarCategory"
			/>
			<TextView
				android:text="@string/placeholder_date"
				android:id="@+id/article_date"
				android:layout_width="fill_parent"
				style="@style/InfoBarDate"
			/>
		</LinearLayout>
		<TextView
			android:text="@string/placeholder_title"
			android:id="@+id/article_title"
			android:layout_below="@+id/info_bar_article"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@style/StandardHeading"
		/>
		<ImageView
			android:src="@drawable/background_comment"
			android:id="@+id/article_image"
			android:layout_below="@+id/article_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="7dp"
			android:layout_marginRight="7dp"
			android:contentDescription="@string/description_article_image"
		/>
		<TextView
			android:text="@string/placeholder_content"
			android:id="@+id/article_content"
			android:layout_below="@+id/article_image"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@style/StandardText"
		/>
		<TextView
			android:text=""
			android:id="@+id/article_editor_comment_top"
			android:layout_below="@+id/article_content"
			android:layout_width="fill_parent"
			android:layout_height="9dp"
			android:layout_marginLeft="7dp"
			android:layout_marginRight="7dp"
			android:background="@color/grey_dark"
		/>
		<TextView
			android:text="@string/placeholder_editors_comment"
			android:id="@+id/article_editor_comment"
			android:layout_below="@+id/article_editor_comment_top"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="7dp"
			android:layout_marginRight="7dp"
			android:background="@drawable/background_comment"
			style="@style/StandardText"
		/>
	</RelativeLayout>
</ScrollView>
