<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/announcement_scroll_view"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
>
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="10dp"
	>
		<TextView
			android:text="@string/placeholder_category"
			android:id="@+id/announcement_category"
			android:layout_width="fill_parent"
			style="@style/InfoBarCategory"
		/>
		<TextView
			android:text="@string/placeholder_title"
			android:id="@+id/announcement_title"
			android:layout_below="@+id/announcement_category"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			style="@style/StandardHeading"
		/>
		<LinearLayout
			android:id="@+id/layout_announcement_where"
			android:layout_below="@+id/announcement_title"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
		>
			<TextView
				android:text="@string/placeholder_where"
				android:id="@+id/announcement_where_label"
				android:layout_width="70dp"
				android:layout_height="wrap_content"
				style="@style/InfoLabel"
			/>
			<TextView
				android:text="@string/placeholder_content"
				android:id="@+id/announcement_where"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/InfoParagraph"
			/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/layout_announcement_when"
			android:layout_below="@+id/layout_announcement_where"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
		>
			<TextView
				android:text="@string/placeholder_when"
				android:id="@+id/announcement_when_label"
				android:layout_width="70dp"
				android:layout_height="wrap_content"
				style="@style/InfoLabel"
			/>
			<TextView
				android:text="@string/placeholder_content"
				android:id="@+id/announcement_when"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				style="@style/InfoParagraph"
			/>
		</LinearLayout>
		<TextView
			android:text="@string/placeholder_content"
			android:id="@+id/announcement_content"
			android:layout_below="@+id/layout_announcement_when"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			style="@style/StandardText"
		/>
		<TextView
			android:text="@string/placeholder_published_by"
			android:id="@+id/announcement_author"
			android:layout_below="@+id/announcement_content"
			android:layout_alignRight="@+id/announcement_content"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="7dp"
		/>	
	</RelativeLayout>
</ScrollView>